# xfsserv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  configure.bat  generate.bat  run.bat  run_tests.bat
src/: main.cpp
src/common/: data.hpp  utility.hpp
src/common/design/: IObserver.hpp
src/dispatcher/: idispatcher.hpp
src/dispatcher/implementations/: cdispatcher.cpp  cdispatcher.hpp
src/msgwnd/: imsgwnd.hpp
src/msgwnd/implementations/: cmsgwnd.cpp  cmsgwnd.hpp
src/server/: iserver.hpp
src/server/implementations/: cserver.cpp  cserver.hpp
src/system/: isystem.hpp
src/system/implemetations/: csystem.cpp  csystem.hpp
src/xfs/common/: xfs_w.hpp  xfsdef.hpp
src/xfs/common/xfs_headers/: xfsadmin.h  xfsalm.h  xfsapi.h  xfsbcr.h  xfscam.h  xfscdm.h  xfsceu.h  xfschk.h  xfscim.h  xfsconf.h  xfscrd.h  xfsdep.h  xfsidc.h  xfsipm.h  xfspin.h  xfsptr.h  xfssiu.h  xfsspi.h  xfsttu.h  xfsvdm.h
src/xfs/xfsapi_w/: ixfsapi_w.cpp  ixfsapi_w.hpp  xfsapi_w.hpp
src/xfs/xfsctrl/: ixfsctrl.hpp
src/xfs/xfsctrl/implementations/: cxfsctrl.cpp  cxfsctrl.hpp
src/xfs/xfsdev/: ixfsdev.cpp  ixfsdev.hpp
src/xfs/xfsdev/xfscam_w/: cxfscam_w.cpp  cxfscam_w.hpp  ixfscam_w.hpp  xfscam_w.hpp
src/xfs/xfswnd/: ixfswindow.hpp
src/xfs/xfswnd/Implementations/: cxfswindow.cpp  cxfswindow.hpp
tests/: gtest_wfs_structures.hpp  gtest_wfsapi_structures.hpp  gtest_wfscam_structures.hpp  gtests.cpp
